# fastapi-sample

./: .env.sample  .gitignore  .pre-commit-config.yaml  README.md  cspell.json  install.sh  log_conf.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
app/: main.py
app/core/: config.py  exception.py  middleware.py
app/core/utils/: file.py
app/domain/entities/: dynamodb_entity.py  inference_entity.py  llm_entity.py  reception_entity.py
app/domain/enum/: enum.py  llm_enum.py  model.py
app/domain/usecases/: inference_usecase.py  reception_usecase.py
app/infrastructure/aws/: dynamodb.py  sqs.py
app/infrastructure/llm/: anthoropic.py
app/routers/: main.py
app/routers/v1/: inference.py  reception.py
prompt/: test.jinja  test2.jinja
tests/: test_endpoint.py
